MDEV-4243 Warnings/errors while compiling with clang