storage/maria/ma_test3.c
@@ -114,7 +114,7 @@ int main(int argc,char **argv)
       sleep(1);
       return 0;
     }
-    rnd(1);
+    (void)rnd(1);
   }
 
   for (i=0 ; i < forks ; i++)
